...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@null"
            android:fontFamily="sans-serif-medium"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/inputButtonPassword"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_gradient"
            android:elevation="3dp"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="10dp"
            android:hint="Password"
            android:textColorHint="@color/grey"
            android:textSize="24sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/inputButtonUsername"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/button_gradient"
            android:elevation="3dp"
            android:ems="10"
...
