<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_rentals"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.HomepageFragment">

    <TextView
        android:id="@+id/rentals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="My Rentals"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rentals"
        android:layout_marginTop="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

</RelativeLayout>