...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:background="@null"
...
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_back"
            tools:layout_editor_absoluteX="1dp" />

            <!-- Rent Button -->
            <Button
                android:id="@+id/buttonRent"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginEnd="7dp"
                android:background="@drawable/button_green"
                android:backgroundTint="@null"
                android:fontFamily="sans-serif-medium"
...
                android:clipToOutline="true"
                android:elevation="5dp"
                app:srcCompat="@drawable/placeholder_post_img" />

            <!-- Post Title -->
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lamborghini"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="48sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- Rental Period (daily, weekly, monthly) -->
                <TextView
                    android:id="@+id/rent_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="WEEKLY"
                    android:textColor="@color/grey"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Price (per rental period) -->
                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="$4000"
                    android:textColor="@color/green_600"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Post Description -->
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/large_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp" />

...
